added a button to open the save location added better pattern to save the files.